--- a/offline_logging_testing/config.yaml
+++ b/offline_logging_testing/config.yaml
@@ -42,13 +42,19 @@ endpoints:
         mode: append
     getNetworkClientsApplicationUsage:
         # requires getNetworkClients
+        # Note that this will not work correctly for short scan intervals. 20min+ is recommended
         enabled: true
         collection: networkClientsApplicationUsage
         mode: append
     getNetworkClientTrafficHistory:
         # requires getNetworkClients
-        # This can be pretty slow in large environments, since every client needs to be fetched individually
+        # This can be very slow in large environments, since every client needs to be fetched individually
+        # and log entries on long-running networks can be huge, even hitting the MongoDB 16MB/document limit
         enabled: true
+        # Splits large traffic history arrays to multiple pages to be able to write them into the database. 
+        # Lower this value if you are getting "document too large" errors, or increase to have fewer documents
+        # per client
+        max_history_records_per_document: 10000
         collection: networkClientTrafficHistory
         mode: update
     getNetworkMerakiAuthUsers:
